--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-gradio
-whisper
-parselmouth
-lumpy
-matplotlib
-click<8,>=7
-six
+aiofiles==23.2.1
+anyio==4.4.0
+click==8.1.7
+gradio==4.44.0
+huggingface-hub==0.24.7
+librosa==0.10.2.post1
+matplotlib==3.9.2
+numpy==1.26.4
+openai-whisper==20231117
+pandas==2.2.2
+praat-parselmouth==0.4.4
+pydub==0.25.1
+torch==2.2.2
